syntax = "proto3";

package grpc.product;

option java_multiple_files = true;
option java_package = "grpc.product";
option java_outer_classname = "ConfirmProductReservation";

message ConfirmProductReservationRequest {
  int64 productId = 1;
  int64 reservationId = 2;
}

message ConfirmProductReservationResponse {
  bool result = 1;
  int64 productId = 2;
  int64 sellerId = 3;
  int64 buyQuantity = 4;
}

service ConfirmProductReservationService {
  rpc confirmReservation (ConfirmProductReservationRequest) returns (ConfirmProductReservationResponse);}
