syntax = "proto3";

package grpc.product;

option java_multiple_files = true;
option java_package = "grpc.product";
option java_outer_classname = "CreateProductReservation";

message CreateProductReservationRequest {
  int64 customerId = 1;
  int64 productId = 2;
  int64 quantity = 3;
}

message CreateProductReservationResponse {
  int64 reserveId = 1;
}

service CreateProductReservationService {
  rpc createReserve (CreateProductReservationRequest) returns (CreateProductReservationResponse);
}
